<resources>
    <string name="app_name">Android Course</string>
    <string name="btn_text">test</string>
    <string name="open_map">Open Map</string>
    <string name="text_intent">text intent</string>
    <string name="share_using">Select</string>
    <string name="login">Login</string>
    <string name="toast">toast</string>
    <string name="toast_message">hi toast</string>
    <string name="dialog_message">Hi dialog</string>
    <string name="exit_toast_message">Exit??</string>
    <string name="snackbar">Snackbar</string>
    <string name="OK">ok</string>
    <string name="cancel">cancel</string>
    <string name="dialog">dialog</string>
    <string name="contactList">show contact list</string>
    <string name="Menu">Menu</string>
    <string name="Delete">Delete</string>
    <string name="app_main_activity">Main Activity</string>
    <string name="Download">Download</string>
    <string name="a_downloader">Async Downloader</string>
    <string name="t_downloader">Thread Download</string>

    <array name="Dialog_list">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 3</item>
    </array>
    <string name="title_activity_maps">Map</string>

</resources>
