<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/dl_main"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/color_white"
       android:orientation="vertical">
       <androidx.appcompat.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?actionBarSize"
           app:title="@string/app_main_activity"
           app:subtitle="@string/app_name"
           android:background="@color/colorAccent">

       </androidx.appcompat.widget.Toolbar>
       <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <LinearLayout
               android:id="@+id/ll_main"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               tools:context=".IntentActivity">


               <Button
                   android:id="@+id/btn_toast"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_margin="30dp"
                   android:background="@drawable/btn_background"
                   android:text="@string/toast" />

               <Button
                   android:id="@+id/btn_snackbar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_margin="30dp"
                   android:background="@drawable/btn_background"
                   android:text="@string/snackbar" />
               <Button
                   android:id="@+id/btn_dialog"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_margin="30dp"
                   android:background="@drawable/btn_background"
                   android:text="@string/dialog" />


               <Button
                   android:id="@+id/btn_contact_activity"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_margin="30dp"
                   android:background="@drawable/btn_background"
                   android:text="@string/contactList" />

               <Button
                   android:id="@+id/btn_menu"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_margin="30dp"
                   android:background="@drawable/btn_background"
                   android:text="@string/Menu" />

               <ir.gov.siri.app.MyButton
                   android:id="@+id/btn_map"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:count="1000"
                   android:background="@drawable/btn_background"
                   android:text="@string/open_map" />
           </LinearLayout>

       </ScrollView>
   </LinearLayout>




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@mipmap/android_splash">

    </ImageView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">


    </com.google.android.material.navigation.NavigationView>




</androidx.drawerlayout.widget.DrawerLayout>